--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,19 @@
-# .github/workflows/deploy.yml
-name: Streamlit Deploy
+name: Test Python Setup
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
-      - name: Install Dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Lint Check
-        run: |
-          flake8 .
-
-      - name: Run Streamlit (test only)
-        run: |
-          streamlit run main.py --server.headless true &
-          sleep 10
+      - name: Print Python Version
+        run: python --version
